--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/normalize.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-
+    <header class="header"></header>
+    <main class="content">
+      <section class="description"></section>
+      <section class="digits"></section>
+      <section class="feynman"></section>
+      <section class="kaufman"></section>
+    </main>
+    <footer class="footer"></footer>
   </div>
 </body>
 </html>
