--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
   <div class="page">
-    <header class="header"></header>
+    <header class="header">
+      <img class="header__logo_place_header" src="/images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
+      <img class="header__main-illustration" src="/images/header-image.png" alt="Картина 'Опять двойка'">
+      <img src="" alt="">
+    </header>
     <main class="content">
       <section class="description"></section>
       <section class="digits"></section>
