--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="/images/header-image.png" alt="Картина 'Опять двойка'">
-      <img src="" alt="">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description"></section>
