--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/style.css">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo_place_header" src="/images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="header__logo header__logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
-      <img class="header__main-illustration" src="/images/header-image.png" alt="Картина 'Опять двойка'">
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
+        <a class="header__link" href="#">Узнать &rarr;</a>
+      </p>
+      <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
