--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
           </div>
         </div>
       </section>
-      <section class="feynman"></section>
+      <section class="feynman">
+        <h2 class="feynman__title"></h2>
+        <p class="feynman__subtitle"></p>
+        <a href="#" target="_blank" class="feynman__link"></a>
+        <img src="" alt="Портрет Фейнмана" class="feynman__illustration">
+      </section>
       <section class="kaufman"></section>
     </main>
     <footer class="footer"></footer>
