--- a/index.html
+++ b/index.html
@@ -74,12 +74,58 @@
         </div>
       </section>
       <section class="feynman">
-        <h2 class="feynman__title"></h2>
-        <p class="feynman__subtitle"></p>
-        <a href="#" target="_blank" class="feynman__link"></a>
-        <img src="" alt="Портрет Фейнмана" class="feynman__illustration">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__illustration">
       </section>
-      <section class="kaufman"></section>
+      <section class="kaufman">
+        <h2>Принципы обучения</h2>
+        <p>от Джоша Кауфмана</p>
+        <div>
+          <div class="table__cell">
+            <h3 class="table__heading">1</h3>
+            <p class="table__text">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">2</h3>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">3</h3>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">4</h3>
+            <p class="table__text">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">5</h3>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">6</h3>
+            <p class="table__text">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">7</h3>
+            <p class="table__text">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">8</h3>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">9</h3>
+            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">10</h3>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          </div>
+          <img src="./images/kaufman-triangle.svg" alt="Треугольник">
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </div>
