--- a/index.html
+++ b/index.html
@@ -79,51 +79,51 @@
         <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__illustration">
       </section>
-      <section class="kaufman">
-        <h2>Принципы обучения</h2>
-        <p>от Джоша Кауфмана</p>
-        <div>
-          <div class="table__cell">
-            <h3 class="table__heading">1</h3>
-            <p class="table__text">Выберите привлекательный проект.</p>
+      <section class="kaufman kaufman_theme_dark">
+        <h2 class="section-title section-title__kaufman section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle__kaufman section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table__kaufman table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">2</h3>
-            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">3</h3>
-            <p class="table__text">Определите целевой уровень мастерства.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">4</h3>
-            <p class="table__text">Разбейте навык на элементы.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">5</h3>
-            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">6</h3>
-            <p class="table__text">Устраните препятствия для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">7</h3>
-            <p class="table__text">Выделите специальное время для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">8</h3>
-            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">9</h3>
-            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">10</h3>
-            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
-          <img src="./images/kaufman-triangle.svg" alt="Треугольник">
+          <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
         </div>
       </section>
     </main>
