--- a/index.html
+++ b/index.html
@@ -127,7 +127,30 @@
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_footer">
+          <p class="footer__author">&copy; Виктор Абанькин</p>
+        </div>
+        <div class="footer__columns_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <ul class="footer__column-links">
+            <li class="footer__ column-link"><a href="#">Главная</a></li>
+            <li class="footer__ column-link"><a href="#">Концепции</a></li>
+            <li class="footer__ column-link"><a href="#">Наставники</a></li>
+          </ul>
+        </div>
+        <div class="footer__columns_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li class="footer__ column-link"><a href=""><img src="./images/youtube-icon.svg" alt="логотип ютюба">YouTube</a></li>
+            <li class="footer__ column-link"><a href=""><img src="./images/vk_color_white.svg" alt="логотип вконтакте">ВКонтакте</a></li>
+            <li class="footer__ column-link"><a href=""><img src="./images/tiktok-icon.svg" alt="логотип тиктока">TikTok</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
