--- a/index.html
+++ b/index.html
@@ -130,23 +130,23 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__columns_content_copyright">
-          <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_footer">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
-            <li class="footer__ column-link"><a href="#">Главная</a></li>
-            <li class="footer__ column-link"><a href="#">Концепции</a></li>
-            <li class="footer__ column-link"><a href="#">Наставники</a></li>
+            <li class="footer__column-link"><a href="#">Главная</a></li>
+            <li class="footer__column-link"><a href="#">Концепции</a></li>
+            <li class="footer__column-link"><a href="#">Наставники</a></li>
           </ul>
         </div>
         <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li class="footer__ column-link"><a href=""><img src="./images/youtube-icon.svg" alt="логотип ютюба">YouTube</a></li>
-            <li class="footer__ column-link"><a href=""><img src="./images/vk_color_white.svg" alt="логотип вконтакте">ВКонтакте</a></li>
-            <li class="footer__ column-link"><a href=""><img src="./images/tiktok-icon.svg" alt="логотип тиктока">TikTok</a></li>
+            <li class="footer__column-link"><a href=""><img src="./images/youtube-icon.svg" alt="логотип ютюба" class="footer__icon">YouTube</a></li>
+            <li class="footer__column-link"><a href=""><img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="footer__icon">ВКонтакте</a></li>
+            <li class="footer__column-link"><a href=""><img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="footer__icon">TikTok</a></li>
           </ul>
         </div>
       </div>
