--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="header__logo header__logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
         <a class="header__link" href="#">Узнать &rarr;</a>
@@ -20,7 +20,7 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns two-columns__description">
+        <div class="two-columns description__two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
@@ -34,9 +34,9 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section-title section-title__digits">Цифры и факты</h2>
-        <p class="section-subtitle section-subtitle__digits">Про учёбу и мозг</p>
-        <div class="table table__digits">
+        <h2 class="section-title digits__section-title">Цифры и факты</h2>
+        <p class="section-subtitle digits__section-subtitle">Про учёбу и мозг</p>
+        <div class="table digits__table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -80,9 +80,9 @@
         <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__illustration">
       </section>
       <section class="kaufman kaufman_theme_dark">
-        <h2 class="section-title section-title__kaufman section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle__kaufman section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="table table__kaufman table_theme_dark">
+        <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle kaufman__section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table kaufman__table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -129,11 +129,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_footer">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
-        <div class="footer__columns_content_info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li class="footer__column-link"><a href="#">Главная</a></li>
@@ -144,9 +144,9 @@
         <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li class="footer__column-link"><a href=""><img src="./images/youtube-icon.svg" alt="логотип ютюба" class="footer__icon">YouTube</a></li>
-            <li class="footer__column-link"><a href=""><img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="footer__icon">ВКонтакте</a></li>
-            <li class="footer__column-link"><a href=""><img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="footer__icon">TikTok</a></li>
+            <li class="footer__column-link"><a href=""><img src="./images/youtube-icon.svg" alt="логотип ютюба" class="social__icon">YouTube</a></li>
+            <li class="footer__column-link"><a href=""><img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="social__icon">ВКонтакте</a></li>
+            <li class="footer__column-link"><a href=""><img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="social__icon">TikTok</a></li>
           </ul>
         </div>
       </div>
