--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns description__two-columns">
+        <article class="two-columns description__two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
@@ -30,101 +30,99 @@
               Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. 
               Эти же техники применяются на примере обучения в Практикуме.</p>
-          </div>
-        </div>
+            </div>
+        </article>
       </section>
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
         <p class="section-subtitle digits__section-subtitle">Про учёбу и мозг</p>
-        <div class="table digits__table">
-          <div class="table__cell">
+        <ul class="table digits__table">
+          <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">2,1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_mode-sign">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_mode-sign">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
-        <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__illustration">
       </section>
-      <section class="kaufman kaufman_theme_dark">
+      <section class="kaufman">
         <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle kaufman__section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="table kaufman__table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
+        <ul class="table kaufman__table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-          <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
@@ -135,18 +133,26 @@
         </div>
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <ul class="footer__column-links">
-            <li class="footer__column-link"><a href="#">Главная</a></li>
-            <li class="footer__column-link"><a href="#">Концепции</a></li>
-            <li class="footer__column-link"><a href="#">Наставники</a></li>
-          </ul>
+          <nav>
+            <ul class="footer__column-links">
+              <li class="footer__column-item"><a href="#" class="footer__column-link">Главная</a></li>
+              <li class="footer__column-item"><a href="#" class="footer__column-link">Концепции</a></li>
+              <li class="footer__column-item"><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
         </div>
-        <div class="footer__columns_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li class="footer__column-link"><a href=""><img src="./images/youtube-icon.svg" alt="логотип ютюба" class="social__icon">YouTube</a></li>
-            <li class="footer__column-link"><a href=""><img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="social__icon">ВКонтакте</a></li>
-            <li class="footer__column-link"><a href=""><img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="social__icon">TikTok</a></li>
+            <li class="footer__column-item">
+              <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="логотип ютюба" class="footer__social-icon">YouTube</a>
+            </li>
+            <li class="footer__column-item">
+              <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="footer__social-icon">ВКонтакте</a>
+            </li>
+            <li class="footer__column-item">
+              <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="footer__social-icon">TikTok</a>
+            </li>
           </ul>
         </div>
       </div>
