fix mistakes and layouts

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body>
   <div class="page">
+
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
@@ -18,6 +20,7 @@
       <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
+
     <main class="content">
       <section class="description">
         <article class="two-columns description__two-columns">
@@ -33,6 +36,7 @@
             </div>
         </article>
       </section>
+
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
         <p class="section-subtitle digits__section-subtitle">Про учёбу и мозг</p>
@@ -73,11 +77,13 @@
           </li>
         </ul>
       </section>
+
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
       </section>
+
       <section class="kaufman">
         <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle kaufman__section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
@@ -125,12 +131,14 @@
         </ul>
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум" class="logo logo_place_footer">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
+
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav>
@@ -141,6 +149,7 @@
             </ul>
           </nav>
         </div>
+        
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
