--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="header__link" href="#">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
