--- a/index.html
+++ b/index.html
@@ -22,19 +22,59 @@
     </header>
 
     <main class="content">
+
       <section class="description">
         <article class="two-columns description__two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. 
-              Мы тренируемся решать однообразные задачи. чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
-              Зубрежка быстро выветривается и не приносит пользу.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. 
-              Что с этим делать?</p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. 
-              Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
+              Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, 
+              но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользу.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, 
+              но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, 
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
+
         </article>
+      </section>
+
+      <section class="techniques page__techniques">
+        <h2 class="section-title techniques__section-title">Техники обучения</h2>
+        <p class="section-subtitle techniques__section-subtitle">Пять практик от Барбары Оакли</p>
+        
+        <ul class="cards techniques__cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="изображение на карточке">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать 
+              сфокусированное и рассеянное мышление.</p>
+            </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="изображение на карточке">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="изображение на карточке">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="изображение на карточке">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, 
+              который вас действительно волнует.</p>
+            </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="изображение на карточке">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: 
+              вам только кажется, что вы владеете новой темой.</p>
+            </li>
+        </ul>
+
       </section>
 
       <section class="digits">
