--- a/index.html
+++ b/index.html
@@ -77,6 +77,44 @@
 
       </section>
 
+      <section class="video">
+        <h2 class="section-title video__section-title">Видео на TED</h2>
+        <h2 class="section-subtitle video__section-subtitle">Для тех, кто любит прокрастинировать</h2>
+
+        <div class="video__iframes">
+          <iframe class="video__iframe" 
+          src="https://www.youtube.com/embed/5MgBikgcWnY" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen></iframe>
+
+          <iframe class="video__iframe" 
+          src="https://www.youtube.com/embed/arj7oStGLkU" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen></iframe>
+        </div>
+
+      </section>
+
+      <section class="oakley">
+        <article class="two-columns oakley__two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. 
+              Она считала себя законченным гуманитарием, причём далеко не самым умным. 
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, 
+              что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. 
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», 
+              ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            </div>
+
+        </article>
+      </section>
+
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
         <p class="section-subtitle digits__section-subtitle">Про учёбу и мозг</p>
