add animation for kaufman section

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       <section class="kaufman">
         <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle kaufman__section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <img class="kaufman__triangle rotation" src="./images/kaufman-triangle.svg" alt="треугольник Кауфмана">
         <ul class="table kaufman__table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
