--- a/index.html
+++ b/index.html
@@ -225,6 +225,20 @@
           </li>
         </ul>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+
+        <div class="resources__logo-zone">
+          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип"></a>
+          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип"></a>
+          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип"></a>
+          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип"></a>
+        </div>
+
+      </section>
+
     </main>
 
     <footer class="footer">
