move feynman image

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
+        <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
       </section>
 
       <section class="digits">
